--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-h1{
+header h1{
   font-size: 24px;
   padding-bottom: 8px;
   border-bottom: 1px solid #ddd;
+  background-color: aqua;
+}
+
+main h1{
+  background-color: pink;
 }
